--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <h2><a href="recipes/cheesecake.html">3-ingredient Cheesecake</a></h2>
 </body>
 </html>
