Fill cheesecake.html with recipe

--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -7,5 +7,22 @@
 </head>
 <body>
     <h1>3-ingredient Cheesecake Recipe</h1>
+    <img src="../images/cheesecake.jpg" alt="A white cheesecake with a browned biscuit base">
+    <h2>Description</h2>
+    <p>A light, soufflé-like cheesecake. It only requires cheese, eggs, and white chocolate. The cake is gluten-free and served with berries.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>4 ounces of white chocolate, chopped</li>
+        <li>1/2 cup cream cheese, softened</li>
+        <li>3 large eggs, separated</li>
+    </ul>
+    <h2>Directions</h2>
+    <ol>
+        <li><p><strong>Step 1</strong></p><p>Preheat the oven to 350 degrees F (175 degrees C). Line the bottom of a 9-inch springform pan with parchment paper.</p></li>
+        <li><p><strong>Step 2</strong></p><p>Place white chocolate in the top of a double boiler over simmering water. Stir frequently, scraping down the sides with a rubber spatula to avoid scorching, until chocolate is melted, about 5 minutes. Remove and allow to cool slightly. Mix in cream cheese and egg yolks until well combined.</p></li>
+        <li><p><strong>Step 3</strong></p><p>Beat egg whites in a large glass, metal, or ceramic bowl with an electric mixer until stiff peaks form. Fold in cooled white chocolate mixture. Pour into the prepared springform pan.</p></li>
+        <li><p><strong>Step 4</strong></p><p>Bake in the preheated oven for 15 minutes. Reduce oven temperature to 300 degrees F (150 degrees C) and bake for 15 minutes. Turn the oven off, leaving cheesecake inside for 15 more minutes.</p></li>
+        <li><p><strong>Step 5</strong></p><p>Remove cheesecake from the oven and allow to cool completely at room temperature, about 1 hour. Chill before serving, about 3 hours.</p></li>
+    </ol>
 </body>
 </html>
