Add links to new recipes within index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <h2><a href="recipes/cheesecake.html">3-ingredient Cheesecake</a></h2>
+    <ul>
+        <ls> <h2><a href="recipes/cheesecake.html">3-ingredient Cheesecake</a></h2></ls>
+        <ls> <h2><a href="recipes/alfredo.html">Alfredo</a></h2></ls>
+        <ls> <h2><a href="recipes/green-salad.html">Green Salad</a></h2></ls>
+    </ul>
 </body>
 </html>
