Resize cheesecake.html img & fill green-salad.html

--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>3-ingredient Cheesecake Recipe</h1>
-    <img src="../images/cheesecake.jpg" alt="A white cheesecake with a browned biscuit base">
+    <img src="../images/cheesecake.jpg" alt="A white cheesecake with a browned biscuit base" width="259" height="194">
     <h2>Description</h2>
     <p>A light, soufflé-like cheesecake. It only requires cheese, eggs, and white chocolate. The cake is gluten-free and served with berries.</p>
     <h2>Ingredients</h2>
