--- a/recipes/green-salad.html
+++ b/recipes/green-salad.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Green Salad</h1>
-    <img src="../images/green-salad.jpg" alt="A green salad with an assortment of vegetables">
+    <img src="../images/green-salad.jpg" alt="A green salad with an assortment of vegetables" width="259" height="194">
     <h2>Description</h2>
     <p>A healthy green salad.</p>
     <h2>Ingredients</h2>
